--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,11 +5,12 @@ copyright: Copyright &copy; Gugulethu Hlekwayo. All rights reserved.
 # Repo info
 repo_url: https://github.com/gugulet-hu/qself-process
 repo_name: qself-process
-edit_uri: edit/main/docs/
+edit_uri: https://github.com/gugulet-hu/qself-docs/tree/main/docs
 
 # Theming and style details
 theme:
   name: material
+  language: en
   palette:
     scheme: default
     primary: custom
@@ -65,5 +66,16 @@ markdown_extensions:
   - def_list
   - footnotes
   - pymdownx.betterem
+  - pymdownx.highlight:
+      anchor_linenums: true
+      use_pygments: true
+      pygments_lang_class: true
+      auto_title: true
+  - pymdownx.superfences
   - toc:
       permalink: true
+  - pymdownx.snippets
+  - pymdownx.tabbed:
+      alternate_style: true
+  - pymdownx.tasklist:
+      custom_checkbox: true
