--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -71,7 +71,11 @@ markdown_extensions:
       use_pygments: true
       pygments_lang_class: true
       auto_title: true
-  - pymdownx.superfences
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
   - toc:
       permalink: true
   - pymdownx.snippets
