--- a/.vale.ini
+++ b/.vale.ini
@@ -1,7 +1,7 @@
 StylesPath = .styles
 MinAlertLevel = suggestion
 
-Packages = Microsoft, Google
+Packages = Microsoft
 
 [*]
-BasedOnStyles = Vale, Microsoft, Google, Custom
+BasedOnStyles = Microsoft
