--- a/.vale.ini
+++ b/.vale.ini
@@ -1,7 +1,7 @@
-StylesPath = .styles
+StylesPath = .github/styles
 MinAlertLevel = suggestion
 
 Packages = Microsoft
 
 [*]
-BasedOnStyles = Microsoft
+BasedOnStyles = Vale, Microsoft
