--- a/.vale.ini
+++ b/.vale.ini
@@ -1,7 +1,6 @@
-StylesPath = .github/styles
+StylesPath = ./github/styles
 MinAlertLevel = suggestion
-
 Packages = Microsoft
 
-[*]
+[*.md]
 BasedOnStyles = Vale, Microsoft
