Adding some plugins and testing site structure.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,7 +50,33 @@ extra:
 # Plugins
 plugins:
   - search
+  - autolinks
+  - git-authors
+  - mike
+  - glightbox:
+      zoomable: false
+      loop: false
+      touchNavigation:
+      effect: fade
+      width: 80vw
+      height: auto
+      draggable: false
+  - minify:
+      minify_html: true
+      minify_js: true
+      minify_css: true
+      htmlmin_opts:
+        remove_comments: true
+      cache_safe: true
+  - mkdocs-nav-weight:
+      section_renamed: true
+      index_weight: -10
+      warning: true
   - tags
+  - git-revision-date-localized:
+      enable_creation_date: true
+      type: date
+      fallback_to_build_date: true
   - social:
       cards: true
       cards_color:
