Use pip virtualenv.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -60,7 +60,7 @@ plugins:
   - git-revision-date-localized:
       enable_creation_date: true
       type: date
-      fallback_to_build_date: true
+      fallback_to_build_date: false
   - social:
       cards: true
       cards_color:
