Adding new tracking code.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -86,4 +86,4 @@ markdown_extensions:
 ## Analytics
 
 extra_javascript:
-  - tracking/matomo.js
+  - tracking/matomo.js # For more info, see this issue: https://github.com/mkdocs/mkdocs/issues/1794
