--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,20 +37,20 @@ theme:
     - search.highlight
     - content.action.view
   icon:
-    repo: fontawesome/brands/git-alt
+    repo: material/git
     tag:
-      html: fontawesome/brands/html5
-      js: fontawesome/brands/js
-      css: fontawesome/brands/css3
-      python: fontawesome/brands/python
-      logic: fontawesome/solid/robot
-      database: fontawesome/solid/database
-      display: fontawesome/solid/display
-      analyse: fontawesome/solid/magnifying-glass-chart
-      predict: fontawesome/solid/wand-magic-sparkles
-      watch: fontawesome/solid/stopwatch
-      mobile: fontawesome/solid/mobile
-      laptop: fontawesome/solid/laptop
+      html: material/language-html5
+      js: material/language-javascript
+      css: material/language-css3
+      python: material/language-python
+      logic: material/robot
+      database: material/database-cog
+      display: material/fit-to-screen
+      analyse: material/finance
+      predict: material/crystal-ball
+      watch: material/watch
+      mobile: material/cellphone-cog
+      laptop: material/laptop
 extra_css:
   - stylesheets/g-theme-min.css
 extra:
@@ -69,11 +69,11 @@ extra:
     Mobile: mobile
     Laptop: laptop
   social:
-    - icon: fontawesome/solid/globe
+    - icon: material/web
       link: https://gugulet.hu?src=qself
-    - icon: fontawesome/brands/github
+    - icon: material/github
       link: https://github.com/gugulet-hu
-    - icon: fontawesome/brands/linkedin
+    - icon: material/linkedin
       link: https://www.linkedin.com/in/gugulet-hu/
 
 # Plugins
