Fix database icon and add collect icon.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,7 +44,8 @@ theme:
       css: material/language-css3
       python: material/language-python
       logic: material/robot
-      database: material/database-cog
+      database: material/database
+      collect: material/shape-plus
       display: material/fit-to-screen
       analyse: material/finance
       predict: material/crystal-ball
