Change background colour and fix nav menu.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,5 +17,5 @@ jobs:
         with:
           key: ${{ github.ref }}
           path: .cache
-      - run: pip install mkdocs mkdocs-material mkdocs-material-extensions pillow cairosvg mkdocs-git-revision-date-localized-plugin mkdocs-minify-plugin
+      - run: pip install mkdocs mkdocs-material mkdocs-material-extensions pillow cairosvg mkdocs-git-revision-date-localized-plugin mkdocs-minify-plugin mkdocs-awesome-pages-plugin mkdocs-autolinks-plugin 
       - run: mkdocs gh-deploy --force
