Add mermaid plugin.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -92,6 +92,7 @@ plugins:
   - awesome-pages
   - autolinks
   - tags
+  - mermaid2
   - git-revision-date-localized:
       enable_creation_date: true
   - social:
