--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,7 +20,7 @@ theme:
     text: Overpass Mono
     code: Overpass Mono
   logo: assets/qself-logo-800x800.png
-  favicon: assets/qself-favicon-32x32.png
+  favicon: assets/qself-favicon-200x200.ico
   features:
     - content.code.copy
     - navigation.instant
@@ -105,6 +105,9 @@ markdown_extensions:
   - abbr
   - admonition
   - attr_list
+  - pymdownx.emoji:
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
   - def_list
   - footnotes
   - pymdownx.betterem
