--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -92,9 +92,7 @@ plugins:
   - autolinks
   - tags
   - mermaid2
-  - git-revision-date-localized:
-      enable_creation_date: true
-      fallback_to_build_date: true
+  - git-revision-date-localized
   - social:
       cards: true
       cards_layout_options:
