Adding Spread AI task.

--- a/.vale.ini
+++ b/.vale.ini
@@ -5,4 +5,4 @@ MinAlertLevel = suggestion
 Packages = Microsoft, write-good
 
 [*.md]
-BasedOnStyles = Microsoft, write-good
+BasedOnStyles = Vale, Microsoft, write-good
