Fixed issue with ignoring certain words in Vale linting.

--- a/.vale.ini
+++ b/.vale.ini
@@ -5,4 +5,5 @@ MinAlertLevel = suggestion
 Packages = Microsoft, write-good
 
 [*.md]
-BasedOnStyles = Vale, Microsoft, write-good
+BasedOnStyles = Vale, Microsoft, write-good, extend-spell
+Vale.Spelling = NO
