--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,7 @@ edit_uri: https://github.com/gugulet-hu/qself-docs/tree/main/docs
 # Theming and style details
 theme:
   name: material
+  custom_dir: custom/
   language: en
   palette:
     scheme: default
